# punisher

./: .env  .env.template  .gitignore  AGENTS.MD  README.md  check_wallets.py  debug_coinglass_api.py  pyproject.toml  research.db  start-web.sh  test_browser.py  test_decrypt.py
data/: queue.db  queue.db-shm  queue.db-wal
frontend/: index.html  styles.css
punisher-web/: README.md  index.html  tailwind.config.js  vite.config.ts
punisher-web/components/: SideDrawer.tsx:Zone.Identifier
punisher-web/src/: App.tsx  index.css
src/punisher/: cli.py  config.py  dashboard.py  server.py  tui.py
src/punisher/browser/: client.py
src/punisher/bus/: queue.py
src/punisher/core/: orchestrator.py  tool_executor.py  tools.py
src/punisher/core/agents/: crypto.py  youtube.py
src/punisher/crypto/: bitcoin.py  break_manager.py  hyperliquid.py  hyperliquid_market.py  hyperliquid_parser.py
src/punisher/db/: mongo.py
src/punisher/integrations/: telegram.py
src/punisher/llm/: gateway.py
src/punisher/research/: db.py  youtube.py
src/punisher/scheduler/: research.py
src/punisher/scrapers/: coinglass.py
tests/: test_queue.py
