[project]
name = "punisher"
version = "0.1.0"
description = "Privacy-first Bitcoin AI Assistant"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "python-telegram-bot>=21.0",
    "httpx[http2]>=0.28.0",
    "apscheduler>=3.10.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.9",
    "click>=8.1.7",
    "rich>=13.7.0",
    "playwright>=1.58.0",
    "youtube-transcript-api>=1.2.4",
    "scrapetube>=2.6.0",
    "websockets<14.0",
    "motor>=3.7.1",
    "pymongo>=4.16.0",
    "pycryptodome>=3.23.0",
    "nodriver>=0.38.post1",
]

[project.scripts]
punisher = "punisher.cli:main"
punisher-server = "punisher.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Explicitly tell hatch where the source code is
[tool.hatch.build.targets.wheel]
packages = ["src/punisher"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8.0"
]
